# RRC2021ThreeWolves

./: README.md  evaluate_policy.py  package.xml  run  setup.cfg  setup.py  train_sac.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/three_wolves/lib/three_wolves/: real_trajectory  real_trajectory_example_with_gym  sim_cube_trajectory_test  sim_trajectory  sim_trajectory_example_with_gym
install/three_wolves/share/three_wolves/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
three_wolves/: move_cube_env.py  obs.txt  sac_main.py  utils.py
three_wolves/deep_whole_body_controller/: base_joint_controller.py  contact_planner.py  deep_wbc.py  position_controller.py  qp_test_optimizer.py  qp_torque_optimizer.py  read-test.py  test.py  torque_controller.py
three_wolves/deep_whole_body_controller/evaluation/: evaluation.py
three_wolves/deep_whole_body_controller/model_save/contact/: monitor.csv
three_wolves/deep_whole_body_controller/utility/: pc_reward.py  pinocchio_utils.py  trajectory.py
three_wolves/envs/: contact_cube_env.py  phase_cube_env.py  position_cube_env.py
three_wolves/envs/utilities/: env_utils.py
three_wolves/model_save/triangle_cube_tg_0706/: monitor.csv
three_wolves/scripts/: real_cube_trajectory.py  real_trajectory.py  sim_cube_trajectory.py  sim_cube_trajectory_test.py  sim_cube_trajectory_train.py  sim_trajectory.py
trifinger_simulation/: __init__.py  sim_finger.py
trifinger_simulation/tasks/move_cube_on_trajectory/: __init__.py
(+19 files in other folders)
