<?xml version="1.0"?>
<package format="2">
  <name>three_wolves</name>
  <version>2.0.0</version>
  <description>
      Three Wolves package for the Real Robot Challenge Submission System.
  </description>

  <maintainer email="42jaylonw@gmail.com">Jilong Wang</maintainer>

  <license>BSD 3-clause</license>

  <url type="website">https://real-robot-challenge.com/</url>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>robot_fingers</exec_depend>
  <exec_depend>robot_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
